--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -203,7 +203,7 @@
 }
 
 .navbar-text-custom {
-	padding:17px;
+	padding:15px;
 	margin:0 auto;
 	font-family: 'Helvetica', 'Arial', sans-serif;
 	font-weight:300;
@@ -607,8 +607,8 @@ h3.text-info.thumbnail-title {
 }
 
 .alter-thumbnail {
-	height:375px;
-	width:300px;
+	max-height:375px;
+	max-width:300px;
 }
 
 /***********************
