--- a/motivation/app/views/layouts/_header.html.erb
+++ b/motivation/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-      <%= link_to image_tag("give_me_motivation_logo.png", class:"give-me-motivation-logo"), root_path %>
+      <%= link_to image_tag("give_me_motivation_logo.png", class:"give-me-motivation-logo", alt:"Give Me Motivation"), root_path %>
   	</div>
   	<div class="collapse navbar-collapse">
   		<ul class="nav navbar-nav">
