--- a/motivation/app/views/unmotivational_images/show.html.erb
+++ b/motivation/app/views/unmotivational_images/show.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container-image">
-	<%= image_tag(@image.url, class: "image-display favorite-image") %>
+	<%= image_tag(@image.url, class: "image-display favorite-image", alt:"Unmotivational Image") %>
 
 	<aside class="image-motivate-information-container favorite-image-information-adjustment">
 		<h3 class="text-center">Image Information</h3>
