--- a/motivation/app/views/static_pages/home.html.erb
+++ b/motivation/app/views/static_pages/home.html.erb
@@ -1,5 +1,16 @@
-<div class="button-navigation-homepage">
-		<div class="homepage-buttons"><%= button_to "Videos", video_categories_path, method: :get, class: "home-button" %></div>
-		<div class="homepage-buttons"><%= button_to "Random", random_image_or_video, method: :get, class: "home-button", params: {random: true} %></div>
-		<div class="homepage-buttons"><%= button_to "Images", image_categories_path, method: :get, class: "home-button" %></div>
+<div class="container">
+	<div class="row">
+	  <div class="col-xs-12 col-md-4">
+			<div class="homepage-buttons"><%= button_to "Videos", video_categories_path, method: :get, class: "home-button" %>
+			</div>
+		</div>
+		<div class="col-xs-12 col-md-4">
+			<div class="homepage-buttons"><%= button_to "Random", random_image_or_video, method: :get, class: "home-button", params: {random: true} %>
+			</div>
+		</div>
+		<div class="col-xs-12 col-md-4">
+			<div class="homepage-buttons"><%= button_to "Images", image_categories_path, method: :get, class: "home-button" %>
+			</div>
+		</div>
+	</div>
 </div>
