--- a/motivation/app/views/users/show.html.erb
+++ b/motivation/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     <div class="page-header">
   <h3 class="text-info thumbnail-title left">Your Favorite Videos</h3>
 </div>
-    <%= link_to image_tag(@favorite_video), user_favorite_videos_path(:favorite_videos),  class: "thumbnail user-video-resize center" if @favorite_video %>
+    <%= link_to image_tag(@favorite_video, alt: "Favorite Video"), user_favorite_videos_path(:favorite_videos),  class: "thumbnail user-video-resize center" if @favorite_video %>
     <% if !@favorite_video %>
     	<h1 class= "thumbnail user-video-resize center text-primary text-center">You have no favorite videos yet!</h1> 
     <% end %>
@@ -18,7 +18,7 @@
     <div class="page-header">
   <h3 class="text-info thumbnail-title right">Your Favorite Images</h3>
 </div>
-  	<%= link_to image_tag(@favorite_image, class: "user-image-resize center"), user_favorite_images_path(:favorite_images), class: "thumbnail" if @favorite_image %>
+  	<%= link_to image_tag(@favorite_image, class: "user-image-resize center", alt: "Favorite Image"), user_favorite_images_path(:favorite_images), class: "thumbnail" if @favorite_image %>
   	<% if !@favorite_image %>
   		<h1 class= "thumbnail user-video-resize center text-primary text-center">You have no favorite images yet!</h1>
   	<% end %>
