--- a/motivation/app/views/favorite_videos/show.html.erb
+++ b/motivation/app/views/favorite_videos/show.html.erb
@@ -1,17 +1,32 @@
-<h2 class= "big-video-title"><%= @favorite_video_title.title%></h2>
-<div class="iframe"><iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @favorite_video.url%>" frameborder="0" allowfullscreen></iframe></div>
+<div class="container-fluid">
+	<div class="row">
+  	<div class="col-xs-8 col-sm-8 col-md-8">
+			<h2 class= "big-video-title"><%= @favorite_video_title.title%></h2>
+				<div class="embed-responsive embed-responsive-16by9">
+					<div class="iframe"><iframe class="embed-responsive-item" width="800" height="500" src="https://www.youtube.com/embed/<%= @favorite_video.url%>" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
 
-<aside class="video-motivate-information-container favorite-information-alter">
-	<h2 class="text-center">Category: <%= @favorite_video.video.type.split("V")[0] %></h2>
-	<h4 class="favorite-video-text-adjustment"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
-	</br>
-	<h4 class="favorite-video-text-adjustment"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
-	<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "favorite_images", id: @favorite_video.id, user_id: @favorite_video.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that image off of your favorites list?"}, class: "general-button btn-danger delete-image-alter" %>
-</aside>
-<div class="clear">
-	<div class= "video-show-navigation-buttons">
-		<%= button_to user_favorite_videos_path, method: :get, class: "general-button before-navigation" do %>
-				<span class="glyphicon glyphicon-arrow-left"></span> Back to Favorite Videos 
-			<% end %>
+		<div class="col-xs-4 col-md-4">
+			<aside class="video-motivate-information-container favorite-information-alter">
+				<h2 class="text-center">Category: <%= @favorite_video.video.type.split("V")[0] %></h2>
+				<h4 class="favorite-video-text-adjustment"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
+				</br>
+				<h4 class="favorite-video-text-adjustment"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
+				<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "favorite_images", id: @favorite_video.id, user_id: @favorite_video.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that image off of your favorites list?"}, class: "general-button btn-danger delete-image-alter" %>
+			</aside>
 		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-11 col-sm-11 col-md-11">
+			<div class="clear">
+				<div class= "video-show-navigation-buttons">
+					<%= button_to user_favorite_videos_path, method: :get, class: "general-button before-navigation" do %>
+							<span class="glyphicon glyphicon-arrow-left"></span> Back to Favorite Videos 
+						<% end %>
+					</div>
+			</div>
+		</div>
+	</div>
 </div>
