--- a/motivation/app/views/videos/show.html.erb
+++ b/motivation/app/views/videos/show.html.erb
@@ -1,64 +1,78 @@
 <% if @video %>
-	<h3 class="big-video-title"><%= @video_info.title%></h3>
-	<div class="iframe"><iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @video.url%>" frameborder="0" allowfullscreen></iframe></div>
-
-	<aside>
-		<div class="video-motivate-information-container">
-			<h2 class="text-center">Category: <%= @video.type.split("V")[0] %></h2>
-			<% if @user %>
-				<%= form_for([@user, @favorite]) do |f| %>
-					<%= f.hidden_field :video_id, value: @video.id %>
-					<%= f.hidden_field :url, value: @video.url %>
-					<%= f.hidden_field :user_id, value: @user.id %>
-					<%= f.button "Favorite", class: "general-button favorite" do %>
-				 		<span class= "glyphicon glyphicon-heart"> Make Favorite</span> 
-				 	<% end %>		 		 
-				<% end %>
-				<h4 class="total-favorites-text-videos"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
-				<div class="make-unmotivational-button">
-					<%= form_for([@user, @unmotivational_video]) do |f| %>
-						<%= f.hidden_field :video_id, value: @video.id %>
-						<%= f.hidden_field :user_id, value: @user.id %>
-						<%= f.hidden_field :url, value: @video.url %>
-						<%= f.button "Unmotivational", class: "general-button unmotivational" do %>
-							<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
-							<% end %>
-						<% end %>
-					</div>
-				<h4 class="total-favorites-text-videos"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
-				<% else %>
-				 <%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
-				 		<span class= "glyphicon glyphicon-heart"> Make Favorite</span> 
-				 	<% end %>
-				<h4 class="total-favorites-text-videos"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
-				<div class="make-unmotivational-button">
-					<%= button_to  new_user_path, method: :get, class: "general-button unmotivational", params: {unmotivational_sign_in: true} do %>
-							<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
-						<% end %>
-					<h4 class="total-favorites-text-videos"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
-				<% end %>
+<div class="container-fluid">
+	<div class="row">
+	  <div class="col-xs-8 col-sm-8 col-md-8">
+			<h3 class="big-video-title"><%= @video_info.title%></h3>
+			<div class="embed-responsive embed-responsive-16by9">
+				<div class="iframe "><iframe class="embed-responsive-item" width="800" height="500" src="https://www.youtube.com/embed/<%= @video.url%>" frameborder="0" allowfullscreen></iframe></div>
 			</div>
-		</aside>
+	  </div>
+
+	<div class="col-xs-4 col-md-4">
+		<aside>
+			<div class="video-motivate-information-container">
+				<h2 class="text-center">Category: <%= @video.type.split("V")[0] %></h2>
+				<% if @user %>
+					<%= form_for([@user, @favorite]) do |f| %>
+						<%= f.hidden_field :video_id, value: @video.id %>
+						<%= f.hidden_field :url, value: @video.url %>
+						<%= f.hidden_field :user_id, value: @user.id %>
+						<%= f.button "Favorite", class: "general-button favorite" do %>
+					 		<span class= "glyphicon glyphicon-heart"> Make Favorite</span> 
+					 	<% end %>		 		 
+					<% end %>
+					<h4 class="total-favorites-text-videos"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
+					<div class="make-unmotivational-button">
+						<%= form_for([@user, @unmotivational_video]) do |f| %>
+							<%= f.hidden_field :video_id, value: @video.id %>
+							<%= f.hidden_field :user_id, value: @user.id %>
+							<%= f.hidden_field :url, value: @video.url %>
+							<%= f.button "Unmotivational", class: "general-button unmotivational" do %>
+								<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+								<% end %>
+							<% end %>
+						</div>
+					<h4 class="total-favorites-text-videos"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
+					<% else %>
+					 <%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
+					 		<span class= "glyphicon glyphicon-heart"> Make Favorite</span> 
+					 	<% end %>
+					<h4 class="total-favorites-text-videos"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
+					<div class="make-unmotivational-button">
+						<%= button_to  new_user_path, method: :get, class: "general-button unmotivational", params: {unmotivational_sign_in: true} do %>
+								<span class="glyphicon glyphicon-thumbs-down"> Unmotivational</span>
+							<% end %>
+						<h4 class="total-favorites-text-videos"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
+					<% end %>
+				</div>
+			</aside>
+		</div>
 	</div>
-<div class="clear">
-	<div class= "video-show-navigation-buttons">
-		<% if !@best_video %>
-			<%= button_to video_categories_path, method: :get, class: "general-button before-navigation" do %>
-					<span class="glyphicon glyphicon-arrow-left"></span> Back to Videos 
-				<% end %>
-	</div>
-	<div class= "video-show-navigation-buttons">
-		<%= button_to video_path, method: :get, class: "general-button before-navigation video-width-increase", params: {type: @type} do %>
-				Give Me More Motivation <span class="glyphicon glyphicon-arrow-right"></span> 
+</div>
+<div class="row">
+	<div class="col-xs-11 col-sm-11 col-md-11">
+		<div class="clear">
+			<div class= "video-show-navigation-buttons">
+				<% if !@best_video %>
+					<%= button_to video_categories_path, method: :get, class: "general-button before-navigation" do %>
+							<span class="glyphicon glyphicon-arrow-left"></span> Back to Videos 
+						<% end %>
+			</div>
+			<div class= "video-show-navigation-buttons">
+				<%= button_to video_path, method: :get, class: "general-button before-navigation video-width-increase", params: {type: @type} do %>
+						Give Me More Motivation <span class="glyphicon glyphicon-arrow-right"></span> 
+					<% end %>
+			</div>
+			<div class= "video-show-navigation-buttons">
+			<% elsif @best_video %>
+				<%= button_to top_videos_path, method: :get, class: "general-button before-navigation left" do %>
+						<span class="glyphicon glyphicon-arrow-left"></span> Back to Top Videos 
+					<% end %>
 			<% end %>
+			</div>
+		</div>
 	</div>
-	<div class= "video-show-navigation-buttons">
-	<% elsif @best_video %>
-		<%= button_to top_videos_path, method: :get, class: "general-button before-navigation left" do %>
-				<span class="glyphicon glyphicon-arrow-left"></span> Back to Top Videos 
-			<% end %>
-	<% end %>
-	</div>
+</div>
 </div>
 <% else %>
 	<%= render partial: "shared/video_error" %>
