--- a/motivation/app/views/static_pages/about.erb
+++ b/motivation/app/views/static_pages/about.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="jumbotron about-padding">
 	<p class="text-center about-text">Any suggestions or comments? Please email them to: dylynch91@gmail.com</p>
-	<%= link_to "My Github", "https://github.com/lynchd2", class: "text-center" %>
+	<%= link_to "My Portfolio", "https://dylanlynch.me", class: "text-center" %>
 </div>
 <div class="jumbotron about-padding">
 	<p class="text-center about-text">Thanks for visiting!</p>
