--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background: url("11113347_10153648341028223_3991650530351665363_o.jpg") no-repeat center center fixed;
+  background: url("../assets/images/11113347_10153648341028223_3991650530351665363_o.jpg") no-repeat center center fixed;
   position: relative;
   width: 100%;
   background-size:cover;
