--- a/main.css
+++ b/main.css
@@ -2,13 +2,12 @@
 Homepage Page
 **/
 
-body {
+.full-background {
   background:url("assets/images/background-scenery.jpg") no-repeat center center fixed;
   position: relative;
   width: 100%;
   background-size:cover;
   padding-top:70px;
-
 }
 
 .navbar {
@@ -20,23 +19,44 @@ body {
   font-family:"Nunito";
 }
 
-a {
-
-
+.home-text {
+  color:white;
 }
-.navbar-projects {
-  color: blue;
-  font-size:20px;
-  text-decoration: none;
 
+.project-text {
+  color:white;
+}
+
+.about-text {
+  color:white;
 }
 
 .navbar-about {
-  color: blue;
   font-size:20px;
   text-decoration: none;
 }
-.jumbotron {
+
+
+.navbar-projects {
+  font-size:20px;
+  text-decoration:none;
+}
+
+.navbar-slider:hover .slider {
+  width:100%;
+}
+
+.slider {
+    position: absolute;
+    height: 2px;
+    background-color: #669966;
+    width: 0%;
+    -webkit-transition: width 1s ease;
+    transition: width 1s ease;
+}
+
+
+.jumbotron.home {
   font-family:"Nunito";
   text-align:center;
   background:transparent;
@@ -100,6 +120,132 @@ Projects Page
 **/
 
 
+
 /**
 About Page
 **/
+
+.jumbotron.about {
+  font-family:"Nunito";
+  text-align:center;
+  color:black;
+  height:47em;
+ }
+
+ .jumbotron.about-skills {
+
+  font-family:"Nunito";
+  text-align:center;
+  color:black;
+  height:42.1em;
+  margin-bottom:0;
+  margin-top:7em;
+ }
+
+/**.arrowBottom {
+  height:50px;
+  width:50px;
+  background-color:blue;
+  margin:0 auto;
+  position:relative;
+  
+}
+**/
+* {box-sizing:border-box;transition:all 0.3s;-webkit-transition:all 0.3s;}
+
+
+.pos {
+  position:relative;margin:0 auto;
+  }
+
+.arrowBottom {
+  height:60px;
+  width:60px;
+  border:4px solid blue;
+  border-radius:100%;
+  margin-top:240px;
+}
+
+.arrowTop {
+  height:60px;
+  width:60px;
+  border:4px solid blue;
+  border-radius:100%;
+  margin-top:240px;
+}
+
+.arrowBottom:before,.arrowBottom:after {
+  content:'';
+  position:absolute;
+  top:26px;
+  width:18px;
+  border:2px solid blue;
+  transition:all 0.3s;
+  -webkit-transition:all 0.3s;
+}
+
+.arrowBottom:before {
+  transform:rotateZ(45deg);
+  -webkit-transform:rotateZ(45deg);
+  left:12px;
+  }
+.arrowBottom:after {
+  transform:rotateZ(-45deg);
+  -webkit-transform:rotateZ(-45deg);
+  left:22px;
+}
+
+.arrowBottom:hover {
+  cursor:pointer;border-width:0;
+}
+.arrowBottom:hover:before,.arrowBottom:hover:after {
+  top:40px;
+}
+.arrowBottom:hover:before {
+  left:15px;
+}
+.arrowBottom:hover:after {
+  left:26px;
+}
+
+.arrowTop {
+  height:60px;
+  width:60px;
+  border:4px solid blue;
+  border-radius:100%;
+  margin-top:240px;
+}
+
+.arrowTop:before,.arrowTop:after {
+  content:'';
+  position:absolute;
+  top:26px;
+  width:18px;
+  border:2px solid blue;
+  transition:all 0.3s;
+  -webkit-transition:all 0.3s;
+}
+
+.arrowTop:before {
+  transform:rotateZ(-45deg);
+  -webkit-transform:rotateZ(-45deg);
+  left:12px;
+  }
+.arrowTop:after {
+  transform:rotateZ(45deg);
+  -webkit-transform:rotateZ(45deg);
+  left:22px;
+}
+
+.arrowTop:hover {
+  cursor:pointer;border-width:0;
+}
+.arrowTop:hover:before,.arrowTop:hover:after {
+  top:1px;
+}
+.arrowTop:hover:before {
+  left:15px;
+}
+.arrowTop:hover:after {
+  left:27px;
+}
