--- a/main.css
+++ b/main.css
@@ -73,6 +73,7 @@ body div div ul li {
 
 .brackets-name {
   font-size:8em;
+  opacity: 0;
 }
 
 .dylan-lynch {
@@ -80,9 +81,11 @@ body div div ul li {
   letter-spacing:-7px;
 }
 
+
 .brackets-occupation {
   letter-spacing:-2px;
   font-size:1.5em;
+  opacity: 0;
 }
 
 .web-dev {
@@ -91,6 +94,11 @@ body div div ul li {
   font-size:1.5em;
 }
 
+.name-occupation-hovered{
+  opacity: 1;
+  -webkit-transition: opacity .25s ease-in-out .0s;
+  transition: opacity .25s ease-in-out .0s;
+}
 
 .github-black {
   content:url(https://raw.githubusercontent.com/donaldali/donaldali.github.io/master/assets/images/icons/GitHub/black-64.png);
@@ -98,7 +106,7 @@ body div div ul li {
   height:80px;
   margin:0 auto;
   border-radius:40px;
-  margin-top:10px;
+  margin-right:15px;
 }
 
 .github-white {
@@ -107,6 +115,19 @@ body div div ul li {
   height:80px;
   margin:0 auto;
   border-radius:40px;
+  margin-right:15px;
+}
+
+.mail-black {
+  content:url("assets/images/mail-black.png");
+  margin-left:15px;
+  margin-top:20px;
+  height:80px;
+}
+
+.mail-black:hover {
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
 }
 
 
@@ -128,7 +149,7 @@ About Page
 }
 
 .thumbnail-tech {
-  height:270px;
+  height:230px;
 }
 
 
@@ -144,6 +165,11 @@ About Page
 .caption:hover {
   color:white;
 }
+
+.thumbnail-intro {
+  margin-top:50px;
+}
+
 .jumbotron.about {
   font-family:"Nunito";
   text-align:center;
@@ -152,8 +178,8 @@ About Page
 
  }
 
-.about-paragraph {
-  font-size:10px;
+.about-paragraph p {
+  font-size:22px;
   color:white;
 }
 
@@ -164,29 +190,31 @@ About Page
 
 .greetings-header {
   color:white;
+  font-size:30px;
 }
 
 .jumbotron.about-skills {
   font-family:"Nunito";
   text-align:center;
   color:white;
-  height:42.1em;
+  height:42.5em;
   margin-bottom:0;
-  margin-top:14.2em;
+  margin-top:18.0em;
   background-color:#337ab7;
  }
 
 
 .skills-header {
-  font-size:60px;
+  font-size:50px;
   color:white;
+  margin-top:-25px;
 }
 .back-tech {
-  font-size:20px;
+  font-size:18px;
 }
 
 .front-tech {
-  font-size:20px;
+  font-size:18px;
 }
 
 * {box-sizing:border-box;transition:all 0.3s;-webkit-transition:all 0.3s;}
@@ -284,3 +312,74 @@ About Page
 /**
 Projects Page
 **/
+
+.projects {
+  height:590px;
+}
+
+.row-projects {
+  margin-top:30px;
+}
+
+.btn-hide {
+  color:#eee;
+  background-color:#eee;
+}
+
+.project-description {
+ color:#eee;
+}
+
+.first-project:hover {
+  color:black;
+  background-color:#E9D985;
+  transition: 0.3s;
+  -webkit-transition:all 0.3s;
+}
+
+.first-project-link {
+  color:#eee;
+}
+
+.first-project-link:hover {
+  color:blue;
+  text-decoration: none;
+}
+
+
+.second-project {
+  margin-top:100px;
+}
+
+.second-project:hover {
+  background-color:#B2BD7E;
+  transition:all 0.3s;
+  -webkit-transition:all 0.3s;
+}
+
+.third-project {
+  margin-top:100px;
+}
+
+.third-project:hover {
+  background-color:#749C75;
+  transition:all 0.3s;
+  -webkit-transition:all 0.3s;
+}
+
+.fourth-project {
+  margin-top:100px;
+  margin-bottom:0;
+}
+
+.fourth-project:hover {
+  background-color:#619974;
+  transition:all 0.3s;
+  -webkit-transition:all 0.3s;
+}
+
+.first-project-image {
+  height:350px;
+  width:500px;
+
+}
