--- a/main.css
+++ b/main.css
@@ -150,7 +150,6 @@ About Page
 }
 
 .thumbnail-tech {
-  height:230px;
   background-color:#337ab7;
 }
 
@@ -218,10 +217,6 @@ About Page
 
 .front-tech {
   font-size:18px;
-}
-
-.other-technology {
-  background-color:#337ab7;
 }
 
 * {box-sizing:border-box;transition:all 0.3s;-webkit-transition:all 0.3s;}
@@ -321,7 +316,8 @@ Projects Page
 **/
 
 .projects {
-  height:590px;
+  height:100%;
+  padding-bottom:11%;
 }
 
 .row-projects {
@@ -335,33 +331,75 @@ Projects Page
 
 .project-description {
  color:#eee;
+ background-color:#eee;
+ border:none;
+ box-shadow:none;
+}
+
+.first-project-description {
+  background-color: #eee;
+  color:#eee;
+}
+
+.first-project:hover .first-project-description {
+  color:#E5A461;
+}
+
+.first-project:hover .first-project-link {
+  color:#E5A461;
+  text-decoration:none;
+}
+
+.first-project:hover .btn-hide {
+  background-color:red;
+}
+
+.first-project {
+  background-color:#eee;
+  color:#eee;
 }
 
 .first-project:hover {
-  color:black;
   background-color:#E9D985;
-  transition: 0.3s;
-  -webkit-transition:all 0.3s;
+  transition: 1s;
+  -webkit-transition:all 1s;
 }
 
 .first-project-link {
   color:#eee;
+  text-decoration:none;
 }
-
-.first-project-link:hover {
-  color:blue;
-  text-decoration: none;
-}
-
 
 .second-project {
   margin-top:100px;
+}
+
+.second-project-link {
+  color:#eee;
+  text-decoration:none;
+}
+
+.second-project:hover .second-project-link {
+  color:#FDF871;
 }
 
 .second-project:hover {
   background-color:#B2BD7E;
   transition:all 0.3s;
   -webkit-transition:all 0.3s;
+}
+
+.second-project:hover .second-project-description {
+  color:#FF6534;
+}
+
+.second-project:hover .second-project-link {
+  color:#FF6534;
+  text-decoration:none;
+}
+
+.second-project:hover .btn-hide {
+  background-color:red;
 }
 
 .third-project {
@@ -385,8 +423,3 @@ Projects Page
   -webkit-transition:all 0.3s;
 }
 
-.first-project-image {
-  height:350px;
-  width:500px;
-
-}
